Fixed a bug where the sidebar and the main area were not scrollable on Firefox

--- a/web/craftnetresources/id/src/sass/_basics.scss
+++ b/web/craftnetresources/id/src/sass/_basics.scss
@@ -1,5 +1,9 @@
 /* HTML Basics */
 
+* {
+  min-height: 0;
+}
+
 body {
   @apply .leading-normal .bg-grey-lighter;
 }
